<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
	<LinearLayout style="@style/Title">
		<TextView android:id="@+id/dir" style="@style/TitleText" />
		<ImageButton android:id="@+id/btn_refresh" style="@style/TitleButton" android:src="@drawable/refresh" android:contentDescription="@string/button_refresh" />
	</LinearLayout>
	<ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="0dip" android:layout_weight="2" />
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ButtonBar">
		<Button android:id="@+id/btn_back" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/button_back" />
		<Button android:id="@+id/btn_exit" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/button_exit" />
	</LinearLayout>
</LinearLayout>
